--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^4.19.1
   firebase_core: ^2.29.0
   cloud_firestore: ^4.16.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
