--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^2.29.0
   cloud_firestore: ^4.16.1
   intl: ^0.19.0
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
